[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ajna-cloud"
version = "0.2.1"
description = "Ajna Cloud SDK — IbexDB client, Cognito auth, structured logging, and Lambda HTTP utilities for Ajna serverless backends"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.28.0",
    "requests>=2.28.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "moto>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ajna_cloud*"]
